--- a/demand-capacity-mgmt-specification/pom.xml
+++ b/demand-capacity-mgmt-specification/pom.xml
@@ -103,6 +103,7 @@
                                 <bigDecimalAsString>true</bigDecimalAsString>
                                 <apiPackage>${codegen.api.package.name}</apiPackage>
                                 <modelPackage>${codegen.model.page.name}</modelPackage>
+                                <unhandledException>true</unhandledException>
                             </configOptions>
                             <typeMappings>
                                 <typeMapping>Timestamp=Instant</typeMapping>
