--- a/demand-capacity-mgmt-backend/src/main/resources/application.yml
+++ b/demand-capacity-mgmt-backend/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     database: POSTGRESQL
     show-sql: true
   datasource:
-    url: jdbc:postgresql://${URL:localhost:5432}/${DB_NAME:dmc}
+    url: jdbc:postgresql://${URL:localhost:5432}/${DB_NAME:mydb}
     username: ${USER:postgres}
     password: ${PASS:postgres}
     driverClassName: org.postgresql.Driver
