--- a/charts/tx-dcm/charts/tx-dcm-backend/templates/hpa.yaml
+++ b/charts/tx-dcm/charts/tx-dcm-backend/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "charts.fullname" . }}
+  name: {{ include "tx-dcm-backend.fullname" . }}
   labels:
-    {{- include "charts.labels" . | nindent 4 }}
+    {{- include "tx-dcm-backend.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "charts.fullname" . }}
+    name: {{ include "tx-dcm-backend.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
