fix: ajusted charts folders

--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -24,7 +24,7 @@ version: 0.1.0
 appVersion: "latest"
 
 dependencies:
-  - name: postgresql
-    repository: https://charts.bitnami.com/bitnami
-    version: 11.x.x
-    condition: postgresql.enabled
+  - name: demand-capacity-management-backend
+    alias: dcm-backend
+    version: 0.1.0
+
