--- a/charts/values-dev.yaml
+++ b/charts/values-dev.yaml
@@ -17,35 +17,8 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-#dcm-capacity-mgmt-front:
-#
-#  springProfiles:
-#    - dev
-#
-#  appName: tx-demand-capacity-mgmt-backend
-#  environment: dev
-#
-#  image:
-#    pullPolicy: Always
-#    # Overrides the image tag whose default is the chart appVersion.
-#    tag: "dev"
-#
-#  ingress:
-#    host: catenax-dcm-capacity-mgmt.demo.catena-x.net
-#    enabled: true
-#
-#  certificate:
-#    host: "catenax-dcm-capacity-mgmt.demo.catena-x.net"
-#
-#  configmap:
-#    # Specifies whether a configmap should be created or not
+dcm-backend:
 
-dcm-capacity-mgmt-backend:
-
-  springProfiles:
-    - dev
-
-  appName: dcm-capacity-mgmt-backend
   environment: dev
 
   image:
@@ -55,7 +28,7 @@ dcm-capacity-mgmt-backend:
 
   ingress:
     enabled: true
-    host: catenax-dcm-capacity-mgmt-dev.demo.catena-x.net
+    host: catenax-dcm-capacity-mgmt.dev.demo.catena-x.net
 
   certificate:
     host: "dcm-capacity-mgmt-backend.dev.demo.catena-x.net"
@@ -63,14 +36,13 @@ dcm-capacity-mgmt-backend:
   configmap:
     # Specifies whether a configmap should be created or not
     data:
-      spring_profiles_active: dev
       SECURITY_ENABLED: 'true'
 
   applicationSecret:
     clientSecret: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/keycloak#client-secret>
     clientId: <path:value-added-service/data/dcm/dev/keycloak#client-id>
 
-postgres:
-  auth:
-    postgresPassword: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#postgres-password>
-    password: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#password>
+  postgres:
+    auth:
+      postgresPassword: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#postgres-password>
+      password: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#password>
