--- a/charts/charts/demand-capacity-management-backend/templates/deployment.yaml
+++ b/charts/charts/demand-capacity-management-backend/templates/deployment.yaml
@@ -34,13 +34,16 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: DCM_DATASOURCE_HOST
-              value: {{ .Values.postgres.env.service_name }}
+              value: {{  include "dcm-backend.postgres.name" . }}
             - name: DCM_DATASOURCE_NAME
               value: {{ .Values.postgres.auth.database }}
             - name: DCM_DATASOURCE_USER
               value: {{ .Values.postgres.auth.username }}
             - name: DCM_DATASOURCE_PASS
-              value: {{ .Values.postgres.auth.password }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "dcm-backend.postgres.name" . }}
+                  key: password
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
