fix: ajusted postgres

--- a/charts/charts/demand-capacity-management-backend/Chart.yaml
+++ b/charts/charts/demand-capacity-management-backend/Chart.yaml
@@ -28,3 +28,11 @@ type: application
 version: 0.1.0
 
 appVersion: "1.16.0"
+
+
+dependencies:
+  - name: postgresql
+    version: 11.*.*
+    repository: https://charts.bitnami.com/bitnami
+    alias: postgres
+    condition: postgres.enabled
