fix: ajusted pass

--- a/charts/values-dev.yaml
+++ b/charts/values-dev.yaml
@@ -40,5 +40,5 @@ dcm-backend:
 
   postgres:
     auth:
-      postgresPassword: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#postgres-password>
+      postgres-password: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#postgres-password>
       password: <path:cgi-dcm-foss/value-added-service/data/dcm/dev/postgresql#password>
