--- a/demand-capacity-mgmt-backend/pom.xml
+++ b/demand-capacity-mgmt-backend/pom.xml
@@ -71,6 +71,12 @@
             <version>2.10.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
