--- a/demand-capacity-mgmt-backend/src/main/resources/application.yml
+++ b/demand-capacity-mgmt-backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://${DCM_DATASOURCE_HOST:localhost:5432}/${DCM_DATASOURCE_NAME:mydb}
     username: ${DCM_DATASOURCE_USER:postgres}
-    password: ${DCM_DATASOURCE_PASS:postgres}
+    password: cG9zdGdyZXM=
     driverClassName: org.postgresql.Driver
   sql:
     init:
