--- a/charts/charts/demand-capacity-management-backend/templates/deployment.yaml
+++ b/charts/charts/demand-capacity-management-backend/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ include "dcm-backend.postgres.name" . }}
-                  key: postgres-password
+                  key: password
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
