--- a/charts/charts/demand-capacity-management-backend/values.yaml
+++ b/charts/charts/demand-capacity-management-backend/values.yaml
@@ -175,5 +175,5 @@ postgres:
   auth:
     database: dcm
     username: dcm
-    password: ""
-    postgres-password: ""
+    password: "dcm"
+    postgres-password: "dcm"
