--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -31,5 +31,5 @@ postgres:
   auth:
     database: dcm
     username: dcm
-    password: ""
-    postgres-password: ""
+    password: "dcm"
+    postgres-password: "dcm"
