--- a/demand-capacity-mgmt-backend/src/main/resources/application.yml
+++ b/demand-capacity-mgmt-backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://${DCM_DATASOURCE_HOST:localhost:5432}/${DCM_DATASOURCE_NAME:dcm}
     username: ${DCM_DATASOURCE_USER:dcm}
-    password: cG9zdGdyZXM=
+    password: dcm
     driverClassName: org.postgresql.Driver
   sql:
     init:
