fix: included actuator

--- a/demand-capacity-mgmt-backend/src/main/resources/application.yml
+++ b/demand-capacity-mgmt-backend/src/main/resources/application.yml
@@ -11,5 +11,9 @@ spring:
     init:
       platform: postgres
 
+management:
+  security:
+    enable:false
+
 
 #url: jdbc:oracle:thin:@//${ORACLEDB_HOST}:${ORACLEDB_PORT}/${ORACLEDB_SERVICENAME}
