--- a/charts/charts/demand-capacity-management-backend/values.yaml
+++ b/charts/charts/demand-capacity-management-backend/values.yaml
@@ -133,7 +133,7 @@ livenessProbe:
   # -- Number of seconds after which a liveness probe times out
   timeoutSeconds: 1
   # -- HTTP endpoint
-  path: /management/health/liveness
+  path: /management/health
   # -- Port used
   port: 8080
 # -- Determine when a pod is ready to start accepting requests
@@ -143,7 +143,7 @@ readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
-  path: /management/health/readiness
+  path: /management/health
   port: 8080
 
 # -- Defines the client secret and client ID
