--- a/charts/charts/demand-capacity-management-frontend/Chart.yaml
+++ b/charts/charts/demand-capacity-management-frontend/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: charts
+name: demand-capacity-management-frontend
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -21,20 +21,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "latest"
-
-dependencies:
-  - name: postgresql
-    version: 11.*.*
-    repository: https://charts.bitnami.com/bitnami
-    alias: postgres
-    condition: postgres.enabled
-  - name: demand-capacity-management-backend
-    alias: dcm-backend
-    version: 0.1.0
-  - name: demand-capacity-management-frontend
-    alias: dcm-frontend
-    version: 0.1.0
-
-
-
+appVersion: "1.16.0"
