fix: ajusted values

--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -33,5 +33,9 @@ dependencies:
     alias: dcm-backend
     version: 0.1.0
 
+  - name: demand-capacity-management-frontend
+    alias: dcm-frontend
+    version: 0.1.0
+
 
 
