--- a/charts/charts/demand-capacity-management-frontend/values.yaml
+++ b/charts/charts/demand-capacity-management-frontend/values.yaml
@@ -26,7 +26,7 @@ replicaCount: 1
 image:
   registry: "ghcr.io"
   name: "catenax-ng/tx-demand-capacity-mgmt-frontend"
-  pullPolicy: always
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
