--- a/charts/charts/demand-capacity-management-frontend/templates/ingress.yaml
+++ b/charts/charts/demand-capacity-management-frontend/templates/ingress.yaml
@@ -42,7 +42,7 @@ spec:
               service:
                 # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
                 # Adjust that to your service name
-                name: {{ include "vas.fullname" . }}-service
+                name: {{ include "demand-capacity-management-frontend.name" . }}-service
                 port:
                   # Port number, the kubernetes service is listening on
                   # Adjust that to your services' port
