--- a/.github/workflows/veracode-pipeline.yml
+++ b/.github/workflows/veracode-pipeline.yml
@@ -20,68 +20,49 @@
 # SPDX-License-Identifier: Apache-2.0
 #################################################################################
 
-name: "Veracode upload and scan"
+name: Veracode Static Analysis Pipeline Scan
 
 on:
+  push:
+    branches: [ "DCMFOSS-40" ]
   pull_request:
-    branches:
-      - main
-      - dev
-    paths:
-      - 'src/**'
-      - 'pom.xml'
-      - 'Dockerfile'
+    branches: [ "DCMFOSS-40" ]
   schedule:
-    # Once a day
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: '27 12 * * 6'
+
+permissions:
+  contents: read
 
 jobs:
-  Analyze:
-    runs-on: ubuntu-latest
+  build-and-pipeline-scan:
     permissions:
-      actions: read
       contents: read
       security-events: write
+      actions: read
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          repository: ''
 
-      #Setup Java 11
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: 17
+          distribution: adopt
 
-      #Create/Get Maven package cache
-      - name: Cache Maven packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+      - name: Build with Maven
+        run: mvn clean install
 
-      #Package application with Maven
-      - name: Package to JAR
-        run: mvn -B package -DskipTests
-
-      #Create the directory which will be uploaded to Veracode
-      - name: Create Veracode Upload Directory
-        run: mkdir -p target/veracode
-
-      #Copy the jar to directory which gets uploaded to Veracode
-      - name: Copy Pool JAR
-        run: cp target/value-added-service-*.jar target/veracode/value-added-service.jar
+      - name: Zip application sources
+        run: zip -r veracode-scan-target.zip ./
 
       - name: Run Veracode Upload And Scan
-        uses: veracode/veracode-uploadandscan-action@0.2.1
+        uses: veracode/veracode-uploadandscan-action@0.2.4
         with:
-          # Specify Veracode application name
           appname: "demand-capacity-mgmt-backend"
           createprofile: false
-          # Specify path to upload
-          filepath: "target/veracode"
+          filepath: "./veracode-scan-target.zip"
           vid: "${{ secrets.VERACODE_API_ID }}"
           vkey: "${{ secrets.VERACODE_API_KEY }}"
