--- a/deployment/helm/edc-consumer/Chart.yaml
+++ b/deployment/helm/edc-consumer/Chart.yaml
@@ -21,7 +21,7 @@
 apiVersion: v2
 name: tractusx-connector
 description: |
-  A Helm chart for Tractus-X Eclipse Data Space Connector. This chart is a test mock that can be used as edc consumer for the DPP applicatiton.
+  A Helm chart for Tractus-X Eclipse Data Space Connector. This chart is a test mock that can be used as edc consumer for the DCM applicatiton.
 type: application
 version: 0.3.3
 appVersion: "0.4.1"
