--- a/deployment/helm/edc-provider/Chart.yaml
+++ b/deployment/helm/edc-provider/Chart.yaml
@@ -22,7 +22,7 @@
 apiVersion: v2
 name: tractusx-connector
 description: |
-  A Helm chart for Tractus-X Eclipse Data Space Connector. This chart is a test mock that can be used as edc provider for the DPP applicatiton.
+  A Helm chart for Tractus-X Eclipse Data Space Connector. This chart is a test mock that can be used as edc provider for the DCM applicatiton.
 type: application
 version: 0.3.3
 appVersion: "0.4.1"
